# rust-witter

./: .env.example  Cargo.toml  README.md  rustfmt.toml
setup/: setup.sh  setup.sql
src/: main.rs
src/server/: middleware.rs  mod.rs  users.rs
src/tests/: mod.rs  test_helpers.rs
src/tests/endpoints/: mod.rs  user.rs
