[package]
name = "witter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes", "unstable"] }
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = [
  "runtime-async-std-rustls",
  "macros",
  "chrono",
  "json",
  "postgres",
  "uuid",
] }
thiserror = "1.0.30"
tide = "0.16.0"
uuid = "0.8.2"

[dev-dependencies]
assert-json-diff = "2.0.1"
tide-testing = "0.1.3"
